@@ -12,6 +12,7 @@
 * Vote is now a command which works by Account
 * Fixed a BNetUser perspective bug
 * ChatQueue: Unban requires ops
+* Fixed logic to decide which connection of a profile is the primary
 
 2.0.5 (r1300) 2008-04-09:
 * Added a Cayenne persistence layer to address database problems
